@@ -1,3 +1,7 @@
+2009-06-15  higepon  <higepon@users.sourceforge.jp>
+
+        * OSCompatThread.h : Fixed condition-variable-wait!. Thanks to Shiro Kawai for pointing out the bug.
+
 2009-06-12  higepon  <higepon@users.sourceforge.jp>
 
         * lib/mosh/concurrent.ss: Added document.
